hphp/hack/test/typecheck/inout/bad_inout_decl_async_generator.php.exp
File "bad_inout_decl_async_generator.php", line 5, characters 38-39:
Inout parameters cannot be defined on async functions, generators or coroutines. (NastCheck[3042])
